<resources>
    <string name="app_name">BasicEcommerce</string>
    <string name="home">Home</string>
    <string name="feed">Feed</string>
    <string name="cart">Cart</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="sign_in">Sign In</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>

    <string name="favorite">Favorite</string>
    <string name="my_profile">My Profile</string>
    <string name="buy">Buy</string>

    <string name="facebook_app_id">1114184692288289</string>
    <string name="fb_login_protocol_scheme">fb1114184692288289</string>
</resources>
