<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewModel"
            type="com.devileya.basicecommerce.presentation.login.LoginViewModel" />
    </data>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.login.LoginActivity"
    android:background="@color/white"
    android:padding="@dimen/margin_padding_16dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:cardCornerRadius="@dimen/margin_padding_16dp"
        android:elevation="@dimen/margin_padding_4dp"
        app:cardBackgroundColor="@color/colorPrimary">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_padding_16dp">
    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textAllCaps="true" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_rounded"
        android:hint="@string/username"
        android:inputType="text"
        android:maxLines="1"
        android:padding="12dp"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"
        android:textSize="18sp"
        android:layout_marginTop="@dimen/margin_padding_32dp"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        tools:layout_editor_absoluteX="16dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tf_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_padding_8dp"
        app:hintEnabled="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_username"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/white">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_rounded"
            android:backgroundTint="@color/white"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="12dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/chk_remember_me"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_padding_16dp"
        android:layout_weight="1"
        android:buttonTint="@color/grey"
        android:gravity="center_vertical"
        android:text="@string/remember_me"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/btn_login"
        app:layout_constraintStart_toStartOf="@+id/tf_password"
        app:layout_constraintTop_toBottomOf="@+id/tf_password"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginTop="@dimen/margin_padding_16dp"
        android:background="@drawable/bg_rounded"
        android:backgroundTint="@color/black"
        android:text="@string/sign_in"
        android:textAllCaps="true"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/tf_password"
        app:layout_constraintTop_toBottomOf="@+id/tf_password"
        android:onClick="@{viewModel::login}"/>

    <com.facebook.login.widget.LoginButton
        android:id="@+id/btn_login_fb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="@dimen/margin_padding_8dp"
        app:layout_constraintTop_toBottomOf="@id/btn_login"/>

            <com.google.android.gms.common.SignInButton
                android:id="@+id/btn_login_google"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_padding_8dp"
                android:layout_marginBottom="30dp"
                app:layout_constraintTop_toBottomOf="@id/btn_login_fb" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>